--- a/README.org
+++ b/README.org
@@ -124,12 +124,17 @@ make tangle
 
 This project is licensed under the MIT License - see the [[file:LICENSE][LICENSE]] file for details.
 
-** Acknowledgments
+** Roadmap
 
-- The Hy community for the excellent Lisp dialect
-- FAISS developers for the efficient similarity search
-- LangChain contributors for inspiration
-- DefRecord team for domain expertise
+The development roadmap is tracked in GitHub issues:
+
+- [[https://github.com/defrecord/legal-rag-hy/issues/1][Issue #1]]: Add support for international jurisdictions
+- [[https://github.com/defrecord/legal-rag-hy/issues/2][Issue #2]]: Implement multi-lingual support
+- [[https://github.com/defrecord/legal-rag-hy/issues/3][Issue #3]]: Enhance citation network analysis
+- [[https://github.com/defrecord/legal-rag-hy/issues/4][Issue #4]]: Create REST API for web integration
+- [[https://github.com/defrecord/legal-rag-hy/issues/5][Issue #5]]: Vector database performance benchmarking
+
+See the [[https://github.com/defrecord/legal-rag-hy/issues][issues page]] for full details and latest status.
 
 ** Contributors
 
@@ -139,10 +144,22 @@ This project is licensed under the MIT License - see the [[file:LICENSE][LICENSE
 - [[https://github.com/aygp-dr][Aidan Pace]] - Developer, Infrastructure Integration
 - [[https://github.com/seanjensengrey][Sean Jensen-Grey]] - Research Advisor
 
+** Acknowledgments
+
+- The Hy community for the excellent Lisp dialect
+- FAISS developers for the efficient similarity search
+- LangChain contributors for inspiration
+- DefRecord team for domain expertise
+
 ** Citation
 
 If you use this system in your research, please cite:
 
-#+BEGIN_SRC
-Kumar, K., Walsh, J., Tao, X., & Pace, A. (2025). Legal RAG: A Jurisdiction-Aware Retrieval-Augmented Generation System for Legal Research. In Proceedings of LITCon 2025.
-#+END_SRC
+#+begin_src bibtex
+@inproceedings{kumar2025legal,
+  title={Legal RAG: A Jurisdiction-Aware Retrieval-Augmented Generation System for Legal Research},
+  author={Kumar, Kushagra and Walsh, Jason and Tao, Xianglong and Pace, Aidan},
+  booktitle={Proceedings of LITCon 2025},
+  year={2025}
+}
+#+end_src
