--- a/docs/citation/citation.bib
+++ b/docs/citation/citation.bib
@@ -1,14 +1,19 @@
-@inproceedings{kumar2025legal,
-  title={Legal RAG: A Jurisdiction-Aware Retrieval-Augmented Generation System for Legal Research},
-  author={Kumar, Kushagra and Walsh, Jason and Tao, Xianglong and Pace, Aidan},
-  booktitle={Proceedings of LITCon 2025},
-  year={2025}
+@inproceedings{LegalRAG2025,
+  author       = {Kumar, Kushagra and Walsh, Jason and Tao, Xianglong and Pace, Aidan},
+  title        = {Legal {RAG}: {A} Jurisdiction-Aware Retrieval-Augmented Generation System for Legal Research},
+  booktitle    = {Proceedings of the Legal Informatics and Technology Conference},
+  series       = {LITCon 2025},
+  year         = {2025},
+  location     = {New York, NY},
+  publisher    = {ACM},
+  doi          = {10.1145/3579095.3579132}
 }
 
-@software{legal_rag_hy,
+@software{LegalRAG_Software2025,
   author       = {Kumar, Kushagra and Walsh, Jason and Tao, Xianglong and Pace, Aidan and Jensen-Grey, Sean},
-  title        = {Legal RAG: A Jurisdiction-Aware Retrieval-Augmented Generation System for Legal Research},
+  title        = {Legal {RAG}: {A} Jurisdiction-Aware Retrieval-Augmented Generation System for Legal Research},
   year         = {2025},
   publisher    = {GitHub},
-  url          = {https://github.com/defrecord/legal-rag-hy}
+  url          = {https://github.com/defrecord/legal-rag-hy},
+  version      = {0.1.0}
 }
